Fix bug that stretched the restaurant image in Safari

--- a/client/src/styles/landing.css
+++ b/client/src/styles/landing.css
@@ -172,6 +172,7 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
+  align-items: flex-start;
 }
 
 .rest-image img {
